# grevi-server

./: .env  Cargo.toml  README.md  Rocket.toml
assets/: directives.graphql  schema.graphql
migrations/2020-01-10-163052_create_enums/: up.sql
migrations/2020-01-10-163156_create_users/: up.sql
migrations/2020-01-10-163736_create_chat_rooms/: down.sql  up.sql
migrations/2020-01-10-163849_create_chat_members/: down.sql  up.sql
migrations/2020-01-10-164229_create_chat_messages/: down.sql  up.sql
migrations/2020-01-10-164554_create_friendships/: down.sql  up.sql
migrations/2020-01-10-164700_create_posts/: up.sql
migrations/2020-01-10-164755_create_post_votes/: down.sql  up.sql
migrations/2020-01-10-164914_create_requests/: down.sql  up.sql
migrations/2020-01-10-165042_create_groups/: up.sql
migrations/2020-01-10-165147_create_group_admins/: down.sql  up.sql
migrations/2020-01-10-165312_create_group_members/: down.sql  up.sql
migrations/2020-01-10-165406_create_events/: down.sql  up.sql
migrations/2020-01-10-165502_create_event_participants/: down.sql  up.sql
migrations/2020-01-10-165615_create_sessions/: down.sql  up.sql
migrations/2020-01-10-165657_insert_chat_rooms_data/: up.sql
migrations/2020-01-10-165758_insert_users_data/: up.sql
migrations/2020-01-10-165813_insert_friendships_data/: up.sql
migrations/2020-01-10-165844_insert_groups_data/: up.sql
migrations/2020-01-10-165904_insert_group_admins_data/: up.sql
migrations/2020-01-10-165950_insert_group_members_data/: up.sql
src/: db.rs  graphql.rs  macros.rs  main.rs
(+11 files in other folders)
