[package]
name = "grevi-server"
version = "0.1.0"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.4", default-features = false, features = ["chrono", "serde_json"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
juniper = "0.14"
juniper-eager-loading = "0.5"
juniper-from-schema = "0.5"
juniper_rocket = "0.5"
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_sqlite_pool", "diesel_postgres_pool"]

[dev-dependencies.juniper]
version = "0.14"
features = ["expose-test-schema", "serde_json"]
